# capybara_game_sfml

./: .gitignore  CMakeLists.txt
include/: Button.h  Coin.h  Constants.h  Game.h  GameState.h  GameplayState.h  MenuState.h  Platform.h  Player.h
src/: Button.cpp  Coin.cpp  Game.cpp  GameplayState.cpp  MenuState.cpp  Platform.cpp  Player.cpp  main.cpp
